Fix tag wrapping

--- a/app/assets/stylesheets/datasets.css.scss
+++ b/app/assets/stylesheets/datasets.css.scss
@@ -246,9 +246,9 @@
   border-bottom: 1px solid #3E6D8E;
   border-right: 1px solid #7F9FB6;
   padding: 3px 4px 3px 4px;
-  margin: 2px 4px 4px 0;
+  margin-left: -1px;
   text-decoration: none;
   font-size: 90%;
-  line-height: 2.4;
+  line-height: 2.0;
   white-space: nowrap;
 }
